Modified theme file.

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -373,5 +373,6 @@
       <script src="{{ 'cart-drawer.js' | asset_url }}" defer="defer"></script>
     {%- endif -%}
     <!-- comments added via shopify code editor -->
+    {% comment %} This Comment is from local code editor {% endcomment %}
   </body>
 </html>
